# Unitree-Go2-Control

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
c_extensions/: pyproject.toml  setup.py
c_extensions/src/: fast_pointcloud.pyi
c_extensions/src/pc_utils/: methods.h  module.c  pcdecode.c  pcfilter.c  pcfilter_voxel_mt.c
c_extensions/src/utils/: atomic_bitset.c  atomic_bitset.h  sorting.c  sorting.h
docs/: conf.py  index.rst  src.aruko.rst  src.controller_input_control.rst  src.core.rst  src.dds.rst  src.lidar_control.rst  src.rst
docs/_build/doctrees/: DOCUMENTATION_GUIDE.doctree  VIDEO_CONTROL_DOCUMENTATION_MANIFEST.doctree  environment.pickle  index.doctree  modules.doctree  src.aruko.doctree  src.audio_control.doctree  src.controller_input_control.doctree  src.core.doctree  src.dds.doctree  src.doctree  src.lidar_control.doctree  src.movement.doctree  src.ocr_control.doctree  src.states.doctree  src.video_control.doctree  (+3 more)
docs/_static/: custom.css
docs/api/: aruko.rst  aruko_helpers.rst  audio_control.rst  audio_module.rst  controller.rst  controller_input_control.rst  core.rst  dog_state.rst  index.rst  input_module.rst  lidar_control.rst  lidar_module.rst  movement.rst  movement_module.rst  ocr_control.rst  ocr_module.rst  robot_state.rst  states.rst  video_control.rst  video_module.rst
docs/internal/: conf.py  controller.rst  controller_input_control.rst  core.rst  dds.rst  index.rst  input_module.rst  states_validation.rst  validation.rst  video_control.rst  video_module.rst
docs/public/: repo_structure.md
docs/usage/: getting_started.rst  index.rst  module_parameters.rst
examples/: examples.md  sdk_test.py  tests.py
go2/core/: __init__.py  controller.py  module.py  registry.py
go2/hardware/: hardware_interface.py
go2/states/: __init__.py  robot_state.py
log/: latest_test
requirements/: docs.in  docs.txt  runtime.in  runtime.txt
ros2_ws/src/go2_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/go2_interfaces/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/go2_interfaces/log/: latest_build
ros2_ws/src/go2_interfaces/msg/: LidarDecoded.msg
ros2_ws/src/lidar_processor/: package.xml  setup.py
ros2_ws/src/lidar_processor/lidar_processor/: lidar_bridge.py  lidar_decoder_node.py  lidar_filter_node.py  lidar_message_utils.py  lidar_to_pointcloud_node.py  multi_node_launcher.py  ros_bridge.py  ros_bridge_node.py
ros2_ws/src/lidar_processor/lidar_processor/utils/: exact_synchronizer.py  singleton.py
ros2_ws/src/lidar_processor/test/: helpers.py  launch.py  test_lidar_launch.py
ros2_ws/src/lidar_processor/test/profiling/: filter_profiling.py
ros2_ws/src/lidar_processor/test/unit/: test_decoder_unit.py  test_filter_unit.py
scripts/: build_c_extensions.sh  build_realsense.sh  build_ros_ws.sh  build_unitree_sdk.sh  install.sh
scripts/windows/: clear_iceoryx_caches.bat
src/aruko/: follow_path_original.py  follow_path_simple.py  tests.py
src/audio_control/: audio_module.py
src/communication/: __init__.py
src/controller_input_control/: callback_manager.py  controller_state.py  input_module.py  input_signal.py
src/core/: __init__.py  base_module.py  controller.py  hardware_control.py  module.py  module_registry.py  registry.py  unitree_control_core.py
src/dds/: dds_constants.py
src/hardware/: __init__.py
src/integrations/: MUJOCO_LOG.TXT  follow_path_original.py  follow_path_simple.py  tests.py
src/lidar_control/: callback_dispatcher.py  decoder.py  lidar_module.py  zmq_receiver.py
src/modules/: __init__.py
src/movement/: movement_module.py
src/ocr_control/: ocr_module.py
src/states/: __init__.py  dog_state.py  dog_state_abstract.py  validation.py
src/video_control/: camera_source.py  camera_source_factory.py  frame_buffer.py  streamer.py  video_module.py
test_scripts/: callback_manager.py  follow_blue.py  input_handle.py  main_move.py  move.py
test_scripts/aruko/: aruko_navigation_and_response.py  rotate_to_aruko.py  rotate_to_aruko_test_input.py  rotate_to_aruko_test_input_002.py  unitree_control_core.py
test_scripts/state_machine/: state.py
unitree_control/aruko/: aruko_navigation_and_response.py  follow_path_depth_camera.py  follow_path_no_depth_camera.py  follow_path_original.py  follow_path_simple  tests.py
unitree_control/audio_control/: audio_module.py
unitree_control/controller_input_control/: input_module.py
unitree_control/core/: control_modules.py  module_registry.py  unitree_control_core.py  unitree_control_core_v2.py
unitree_control/dds/: dds_constants.py
unitree_control/lidar_control/: aggregator.py  decoder.py  testpy
unitree_control/movement/: movement_module.py
unitree_control/ocr_control/: ocr_module.py
unitree_control/states/: dog_state_abstract.py
unitree_control/video_control/: camera_source.py  frame_buffer.py  streamer.py  video_module.py
(+180 files in other folders)
