[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "unitree-go2"
version = "0.1.0"
description = "Python API for Unitree Go2 robot control"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name="7Swaize" }
]
classifiers = [
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
]


[project.optional-dependencies]
dev = ["pytest", "black"]
docs = ["sphinx"]
test = ["pytest"]


[tool.setuptools.packages.find]
where = ["src"]