[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "unitree-go2"
version = "0.1.0"
description = "Python API for Unitree Go2 robot control"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name="7Swaize" }
]
classifiers = [
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]


# docs: https://packaging.python.org/en/latest/specifications/pyproject-toml/
# dynamic read dependencies: https://stackoverflow.com/questions/73600082/how-to-reference-a-requirements-txt-in-the-pyproject-toml-of-a-setuptools-projec
[tool.setuptools.dynamic]
dependencies = { file = "requirements/runtime.txt" }


[project.optional-dependencies]
dev = ["pytest", "black"]
docs = ["sphinx"]
test = ["pytest"]


[tool.setuptools.packages.find]
where = ["src"]